--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,6 +12,34 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Figmaappium" />
+        android:theme="@style/Theme.Fashions"
+        tools:targetApi="31">
+        
+        <!-- Splash Screen Activity -->
+        <activity
+            android:name=".ui.splash.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Fashions">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <!-- Main Activity with Home Screen -->
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="false" />
+        
+        <!-- Product Details Activity -->
+        <activity
+            android:name=".ui.product.ProductDetailsActivity"
+            android:exported="false" />
+        
+        <!-- Cart Activity -->
+        <activity
+            android:name=".ui.cart.CartActivity"
+            android:exported="false" />
+    </application>
 
 </manifest>
